--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 /* Your code goes here */
-div {width: 300px;
+#picture {width: 300px;
   height: 375px;
   margin-top: 100px;
   margin-left: 100px;
   border-width: 5px;
   border-style: dashed;
   border-color: red;
+  display: flex;
 }
 img {
   padding:10px 5px;
